# chatqt

./: .gitignore  CMakeLists.txt  adminanswersess.cpp  alias.h  answer_checker.cpp  answer_checker.h  answer_obj.cpp  answer_obj.h  chatroom.cpp  chatuser.cpp  config.conf  configfile.cpp  configfile.h  configfile.ui  constants.cpp  constants.h  constants_admin.cpp  constants_load.cpp  constants_load.h  formadmin.cpp  formadmin.h  formadmin.ui  formadminserver.cpp  formlogin.cpp  formlogin.h  formlogin.ui  formmaster.cpp  formmaster.h  formmaster.ui  formserverpereferences.cpp  formserverpereferences.h  formserverpereferences.ui  helpfoo.cpp  helpfoo.h  initializators_help.cpp  initializators_help.h  json.h  main.cpp  mainserver.h  mainwindesigner.cpp  (+32 more)
CLIENT/: CMakeLists.txt  answer_checker.cpp  answer_checker.h  answer_session.cpp  client_designer.h  clientwin.cpp  clientwin.h  clientwin.ui  clientwin_request.cpp  clientwin_supply.cpp  formadminuser.cpp  main.cpp  request_json.cpp  request_json.h
